update class ( me )

--- a/YiHeYun/Base.lproj/Me.storyboard
+++ b/YiHeYun/Base.lproj/Me.storyboard
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES" initialViewController="mu7-8l-aJx">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="mu7-8l-aJx">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,6 +13,10 @@
         <scene sceneID="YqQ-rx-ZtA">
             <objects>
                 <viewController id="mu7-8l-aJx" customClass="MineVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="SRH-ti-H0r"/>
+                        <viewControllerLayoutGuide type="bottom" id="lfo-r6-rvj"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="HXG-as-UMo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -17,15 +25,159 @@
                     <navigationItem key="navigationItem" id="R0i-QR-wb2"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="lsg-GQ-s24" kind="show" identifier="settingSegue" id="v8h-4n-P8v"/>
+                        <segue destination="Rc4-Ut-s7i" kind="show" identifier="contactUsSegue" id="maW-Wr-gwv"/>
+                        <segue destination="8xl-wt-MSv" kind="show" identifier="feedbackSegue" id="gmB-tf-i6a"/>
+                        <segue destination="V1E-TB-ipm" kind="show" identifier="friendsSegue" id="c6s-0F-zK5"/>
+                        <segue destination="u6Y-fS-1Qu" kind="show" identifier="healthRecordSegue" id="edz-G7-5eD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GTU-JD-pww" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="497.5" y="1468.5116666666665"/>
+            <point key="canvasLocation" x="1335" y="1710"/>
+        </scene>
+        <!--设置-->
+        <scene sceneID="J2y-Mi-AGs">
+            <objects>
+                <viewController title="设置" id="lsg-GQ-s24" customClass="SettingVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2IW-Ya-afF"/>
+                        <viewControllerLayoutGuide type="bottom" id="DCg-k8-Qq1"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="SFO-gz-B7g">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="设置" id="opc-xo-BpD"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <segue destination="hhB-5V-xn2" kind="show" id="cMD-3U-10r"/>
+                        <segue destination="6M4-zB-uYt" kind="show" id="2ib-vs-Qo0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sSE-Tt-Iaa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2118" y="1057"/>
+        </scene>
+        <!--关于我们-->
+        <scene sceneID="gtK-eT-YGa">
+            <objects>
+                <viewController title="关于我们" id="hhB-5V-xn2" customClass="AboutUsVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="X5k-NQ-yVq"/>
+                        <viewControllerLayoutGuide type="bottom" id="GDf-rw-TaX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9Lm-DW-aVj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="关于我们" id="VOC-Bv-6bu"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Q5h-Pc-swX" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2863" y="1056"/>
+        </scene>
+        <!--联系我们-->
+        <scene sceneID="g20-4g-agg">
+            <objects>
+                <viewController title="联系我们" id="Rc4-Ut-s7i" customClass="ContactUsVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mpL-Nk-apD"/>
+                        <viewControllerLayoutGuide type="bottom" id="mMP-k2-62o"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6NH-BI-XjB">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="联系我们" id="AKS-Ac-Xq7"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Uc-EC-WD3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2118" y="1710"/>
+        </scene>
+        <!--意见反馈-->
+        <scene sceneID="rPC-J3-VMG">
+            <objects>
+                <viewController title="意见反馈" id="8xl-wt-MSv" customClass="FeedbackVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Nyc-Oz-5tq"/>
+                        <viewControllerLayoutGuide type="bottom" id="134-at-94k"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="JYe-nh-iQj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="意见反馈" id="EnV-wv-hij"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mCX-MO-Yhc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2862" y="1710"/>
+        </scene>
+        <!--使用帮助-->
+        <scene sceneID="D3Y-mP-SsJ">
+            <objects>
+                <viewController title="使用帮助" id="6M4-zB-uYt" customClass="HelpVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mqw-ny-YAM"/>
+                        <viewControllerLayoutGuide type="bottom" id="21D-wR-JAn"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="3HE-hy-YEq">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="使用帮助" id="c5c-iS-sRS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="B2b-DN-e8Z" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3578" y="1056"/>
+        </scene>
+        <!--朋友-->
+        <scene sceneID="XHp-zP-4uP">
+            <objects>
+                <viewController title="朋友" id="V1E-TB-ipm" customClass="FriendsVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="klq-6u-Y59"/>
+                        <viewControllerLayoutGuide type="bottom" id="SGT-NS-nTx"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DOC-bR-0wN">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="朋友" id="2qU-5f-NNE"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8zr-vo-wna" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2118" y="394"/>
+        </scene>
+        <!--健康档案-->
+        <scene sceneID="x6d-P7-Aok">
+            <objects>
+                <viewController title="健康档案" id="u6Y-fS-1Qu" customClass="HealthRecordVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rVy-qG-B5E"/>
+                        <viewControllerLayoutGuide type="bottom" id="mWD-HE-cM4"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Dbe-0j-Htk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="健康档案" id="IQ0-F2-0qM"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kj7-wV-4Qw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2118" y="-265"/>
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
-    </simulatedMetricsContainer>
 </document>
