--- a/YiHeYun/Base.lproj/Me.storyboard
+++ b/YiHeYun/Base.lproj/Me.storyboard
@@ -31,11 +31,12 @@
                         <segue destination="8xl-wt-MSv" kind="show" identifier="feedbackSegue" id="gmB-tf-i6a"/>
                         <segue destination="V1E-TB-ipm" kind="show" identifier="friendsSegue" id="c6s-0F-zK5"/>
                         <segue destination="u6Y-fS-1Qu" kind="show" identifier="healthRecordSegue" id="edz-G7-5eD"/>
+                        <segue destination="oFP-Wu-szp" kind="show" identifier="leaveSegue" id="BfO-DV-bBU"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GTU-JD-pww" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1335" y="1710"/>
+            <point key="canvasLocation" x="1338" y="2384"/>
         </scene>
         <!--设置-->
         <scene sceneID="J2y-Mi-AGs">
@@ -98,7 +99,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Uc-EC-WD3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2118" y="1710"/>
+            <point key="canvasLocation" x="2862" y="1719"/>
         </scene>
         <!--意见反馈-->
         <scene sceneID="rPC-J3-VMG">
@@ -199,7 +200,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="mCX-MO-Yhc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2861.5999999999999" y="1709.5952023988007"/>
+            <point key="canvasLocation" x="2118" y="1719"/>
         </scene>
         <!--使用帮助-->
         <scene sceneID="D3Y-mP-SsJ">
@@ -259,6 +260,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kj7-wV-4Qw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2118" y="-265"/>
+        </scene>
+        <!--意见反馈-->
+        <scene sceneID="L33-lA-3HU">
+            <objects>
+                <viewController title="意见反馈" id="oFP-Wu-szp" customClass="LeaveMessageVC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="lyD-WB-2SD"/>
+                        <viewControllerLayoutGuide type="bottom" id="BEn-Y1-JfL"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tb1-O8-NY0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Aiq-CU-Hc7">
+                                <rect key="frame" x="0.0" y="94" width="375" height="180"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="180" id="Ldf-2d-gnf"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请写下您想对健康管家说的话!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jqT-Vy-pEf">
+                                <rect key="frame" x="16" y="106" width="190" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.90980392160000001" green="0.90980392160000001" blue="0.90980392160000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="Aiq-CU-Hc7" firstAttribute="top" secondItem="tb1-O8-NY0" secondAttribute="top" constant="94" id="326-bz-Syb"/>
+                            <constraint firstAttribute="trailing" secondItem="Aiq-CU-Hc7" secondAttribute="trailing" id="B26-rj-YGC"/>
+                            <constraint firstItem="Aiq-CU-Hc7" firstAttribute="leading" secondItem="tb1-O8-NY0" secondAttribute="leading" id="J6Q-gD-pfX"/>
+                            <constraint firstItem="jqT-Vy-pEf" firstAttribute="top" secondItem="Aiq-CU-Hc7" secondAttribute="top" constant="12" id="Ora-C5-5Js"/>
+                            <constraint firstItem="jqT-Vy-pEf" firstAttribute="leading" secondItem="tb1-O8-NY0" secondAttribute="leading" constant="16" id="S2G-e9-KRU"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="留言" id="6tb-sy-L4a"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="leavePlaceholderLabel" destination="jqT-Vy-pEf" id="JG6-VZ-abG"/>
+                        <outlet property="leaveTextView" destination="Aiq-CU-Hc7" id="404-Oj-bcE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NeE-cd-M0m" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2118" y="2385"/>
         </scene>
     </scenes>
 </document>
