--- a/YiHeYun/Base.lproj/Main.storyboard
+++ b/YiHeYun/Base.lproj/Main.storyboard
@@ -461,7 +461,7 @@
         <scene sceneID="GYs-Jx-tdU">
             <objects>
                 <navigationController id="p3M-Hr-OBC" customClass="BaseNC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="首页" image="photo_original_sel.png" id="Mps-Sm-Sj7"/>
+                    <tabBarItem key="tabBarItem" title="首页" image="tab_icon_home_n" selectedImage="tab_icon_home_s" id="Mps-Sm-Sj7"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="cJ2-zx-pvo">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -478,7 +478,7 @@
         <scene sceneID="l83-Kg-EQU">
             <objects>
                 <navigationController id="H3M-4v-qPb" customClass="BaseNC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="发现" id="gUr-EY-G86"/>
+                    <tabBarItem key="tabBarItem" title="发现" image="tab_icon_find_n" selectedImage="tab_icon_find_s" id="gUr-EY-G86"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xXr-CI-DJc">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -699,10 +699,9 @@
                                         <rect key="frame" x="0.0" y="420" width="375" height="60"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" id="TGA-Uz-nvk">
-                                                <rect key="frame" x="20" y="5" width="15" height="20"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="list_add" id="TGA-Uz-nvk">
+                                                <rect key="frame" x="15" y="5" width="20" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="定位：北京市丰台区和义南站168号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="53x-vI-PCX">
                                                 <rect key="frame" x="40" y="5" width="325" height="20"/>
@@ -732,10 +731,9 @@
                                         <rect key="frame" x="0.0" y="485" width="375" height="85"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                         <subviews>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" id="gZI-HF-SdR">
-                                                <rect key="frame" x="20" y="10" width="15" height="20"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="list_act" id="gZI-HF-SdR">
+                                                <rect key="frame" x="15" y="10" width="20" height="20"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="动态" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="jBs-Ii-dzt">
                                                 <rect key="frame" x="40" y="10" width="60" height="20"/>
@@ -1785,7 +1783,7 @@
         <scene sceneID="H3a-sa-Yno">
             <objects>
                 <navigationController id="pEy-wf-lNu" customClass="BaseNC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="我的" id="hvf-8k-0Cf"/>
+                    <tabBarItem key="tabBarItem" title="我的" image="tab_icon_me_s" selectedImage="tab_icon_me_s" id="hvf-8k-0Cf"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pWD-9N-Sdy">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1802,7 +1800,7 @@
         <scene sceneID="iYn-ed-qgM">
             <objects>
                 <navigationController id="UgD-U4-Pma" customClass="BaseNC" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="设定" id="94k-Q3-tV1"/>
+                    <tabBarItem key="tabBarItem" title="设定" image="tab_icon_set_n" selectedImage="tab_icon_set_s" id="94k-Q3-tV1"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="2MA-PG-BBD">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -1823,6 +1821,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        <color key="selectedImageTintColor" red="0.4392156862745098" green="0.15686274509803921" blue="0.53333333333333333" alpha="1" colorSpace="calibratedRGB"/>
                     </tabBar>
                     <connections>
                         <segue destination="p3M-Hr-OBC" kind="relationship" relationship="viewControllers" id="f4q-xm-8iQ"/>
@@ -2216,13 +2215,21 @@
         <image name="home5" width="85" height="84"/>
         <image name="home6" width="85" height="85"/>
         <image name="home7" width="85" height="85"/>
+        <image name="list_act" width="16" height="16"/>
+        <image name="list_add" width="20" height="20"/>
         <image name="login_input_password" width="29" height="29"/>
         <image name="login_input_user" width="29" height="29"/>
         <image name="nav_down" width="15" height="10"/>
         <image name="nav_message" width="20" height="20"/>
         <image name="nnn.png" width="395" height="173"/>
-        <image name="photo_original_sel.png" width="20" height="21"/>
         <image name="soy_wxjt" width="10" height="19"/>
+        <image name="tab_icon_find_n" width="30" height="30"/>
+        <image name="tab_icon_find_s" width="30" height="30"/>
+        <image name="tab_icon_home_n" width="30" height="30"/>
+        <image name="tab_icon_home_s" width="30" height="30"/>
+        <image name="tab_icon_me_s" width="30" height="30"/>
+        <image name="tab_icon_set_n" width="30" height="30"/>
+        <image name="tab_icon_set_s" width="30" height="30"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
